feat: preparar sistema para s3 e imagens
