# apps/server/docs/swagger.json
@@ -509,6 +509,62 @@
                 }
             }
         },
+        "/auth/profile": {
+            "put": {
+                "security": [
+                    {
+                        "JwtAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Update user profile",
+                "parameters": [
+                    {
+                        "description": "Profile update data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.UpdateProfileDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ApiResponse-any"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/refresh": {
             "post": {
                 "consumes": [
@@ -3954,6 +4010,56 @@
                 }
             }
         },
+        "/storage/presigned-url": {
+            "post": {
+                "security": [
+                    {
+                        "JwtAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Storage"
+                ],
+                "summary": "Get presigned URL for file upload",
+                "parameters": [
+                    {
+                        "description": "Request data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/storage.PresignedURLRequestDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ApiResponse-storage_PresignedURLResponseDto"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/tags": {
             "get": {
                 "security": [
@@ -4578,6 +4684,12 @@
                 "id": {
                     "type": "string"
                 },
+                "imageUrl": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
                 "twofa_status": {
                     "type": "boolean"
                 },
@@ -4601,10 +4713,14 @@
             "type": "object",
             "required": [
                 "email",
+                "name",
                 "password"
             ],
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "name": {
                     "type": "string"
                 },
                 "password": {
@@ -4696,6 +4812,21 @@
                 },
                 "newPassword": {
                     "type": "string"
+                }
+            }
+        },
+        "auth.UpdateProfileDto": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "minLength": 3
                 }
             }
         },
@@ -5504,6 +5635,9 @@
                 "name"
             ],
             "properties": {
+                "image_url": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string",
                     "minLength": 3,
@@ -5570,6 +5704,9 @@
                 "id": {
                     "type": "string"
                 },
+                "image_url": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
@@ -5621,6 +5758,9 @@
         "organization.UpdateOrganizationDto": {
             "type": "object",
             "properties": {
+                "image_url": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string",
                     "minLength": 3,
@@ -6144,6 +6284,45 @@
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "storage.PresignedURLRequestDto": {
+            "type": "object",
+            "required": [
+                "contentType",
+                "filename",
+                "type"
+            ],
+            "properties": {
+                "contentType": {
+                    "type": "string"
+                },
+                "filename": {
+                    "type": "string"
+                },
+                "type": {
+                    "description": "To organize files in folder structure",
+                    "type": "string",
+                    "enum": [
+                        "user",
+                        "organization"
+                    ]
+                }
+            }
+        },
+        "storage.PresignedURLResponseDto": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "publicUrl": {
+                    "description": "This might vary based on your S3 setup (CDN, public bucket, etc.)",
+                    "type": "string"
+                },
+                "uploadUrl": {
                     "type": "string"
                 }
             }
@@ -6691,6 +6870,21 @@
             "properties": {
                 "data": {
                     "$ref": "#/definitions/status_page.StatusPageWithMonitorsResponseDTO"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "utils.ApiResponse-storage_PresignedURLResponseDto": {
+            "type": "object",
+            "required": [
+                "data",
+                "message"
+            ],
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/storage.PresignedURLResponseDto"
                 },
                 "message": {
                     "type": "string"
