# apps/server/internal/modules/auth/auth.dto.go
@@ -3,6 +3,7 @@ package auth
 type RegisterDto struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required,password"`
+	Name     string `json:"name" validate:"required"`
 }
 
 type LoginDto struct {
@@ -81,4 +82,9 @@ type TwoFAVerifyResponseDto struct {
 type TwoFADisableRequestDto struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required"`
+}
+
+type UpdateProfileDto struct {
+	Name     string `json:"name" validate:"required,min=3"`
+	ImageURL string `json:"image_url" validate:"omitempty,url"`
 }
